fix(python): Install by pyenv

--- a/.chezmoiscripts/run_once_before_002-install-lang-python.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_002-install-lang-python.sh.tmpl
@@ -1,7 +1,8 @@
 #!/usr/bin/env bash
 
 function install_python() {
-  brew install python@{{ .languages.python }}
+  brew install pyenv
+  pyenv install {{ .languages.python }}
 }
 
 install_python
