fix(install): Install global python

--- a/.chezmoiscripts/run_onchange_before_002-install-lang-python.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_002-install-lang-python.sh.tmpl
@@ -2,7 +2,7 @@
 
 function install_python() {
   brew install pyenv
-  pyenv install {{ .languages.python }}
+  pyenv global {{ .languages.python }}
 }
 
 install_python
