feat(brew): Support third party taps

--- a/.chezmoiscripts/run_onchange_after_install-brew.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_install-brew.sh.tmpl
@@ -3,3 +3,13 @@
 {{ range .packages.brew -}}
 brew install {{ . }} -q
 {{ end -}}
+
+{{ range .packages.cask -}}
+brew install --cask {{ . }}
+{{ end -}}
+
+{{ range .packages.tap -}}
+tap="$(dirname {{ . }})"
+brew tap "${tap}"
+brew install {{ . }}
+{{ end -}}
