fix(volta): Install from web

--- a/.chezmoiscripts/run_onchange_before_003-install-lang-nodejs.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_003-install-lang-nodejs.sh.tmpl
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 
 function install_nodejs() {
-  brew install volta
+  curl https://get.volta.sh | bash
   volta install node
   volta setup
 }
