chore(asdf): Use to manage languages and dev libraries

--- a/.chezmoiscripts/run_onchange_after_install-brew.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_install-brew.sh.tmpl
@@ -1,13 +1,17 @@
 #!/usr/bin/env bash
+# MacOS build version: {{ output "sw_vers" "--buildVersion" }}
 
-{{ range .packages.tap -}}
-brew tap {{ . }}
+{{ if eq .chezmoi.os "darwin" -}}
+
+brew bundle --file=/dev/stdin <<EOF
+{{ range .packages.brews -}}
+brew {{ . | quote }}
 {{ end -}}
-
-{{ range .packages.cask -}}
-brew install --cask {{ . }}
+{{ range .packages.casks -}}
+cask {{ . | quote }}
 {{ end -}}
-
-{{ range .packages.brew -}}
-brew install {{ . }} -q
+{{ range .packages.taps -}}
+tap {{ . | quote }}
+{{ end -}}
+EOF
 {{ end -}}
